added input bar

--- a/from_old_version/experinode.html
+++ b/from_old_version/experinode.html
@@ -1,18 +1,24 @@
 <head>
-	<script src="/bower_components/platform/platform.js"></script>
+	<script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
 
-	 <!-- html imports -->
+	<!-- HTML IMPORTS -->
+<!-- 	<link rel="import" href="bower_components/polymer/polymer.html"> -->
+
+	 <!-- Core Elements -->
     <link rel="import" href="/bower_components/core-scaffold/core-scaffold.html">
     <link rel="import" href="/bower_components/core-toolbar/core-toolbar.html">
     <link rel="import" href="/bower_components/core-menu/core-menu.html">
     <link rel="import" href="/bower_components/core-icon-button/core-icon-button.html">
     <link rel="import" href="/bower_components/core-item/core-item.html">
-    <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
-    <link rel="import" href="/bower_components/paper-item/paper-item.html">
     <link rel="import" href="/bower_components/core-animated-pages/core-animated-pages.html">
     <link rel="import" href="/bower_components/core-animated-pages/transitions/slide-from-right.html">
 
+	<!-- Paper Elements -->
+    <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
+    <link rel="import" href="/bower_components/paper-item/paper-item.html">
+<!--  	<link rel="import" href="/bower_components/paper-input-decorator/paper-input-decorator.html"> -->
 </head>
+
 
 <body>
 	{{> experinode}}
