proper selection of nodes

--- a/from_old_version/html/nodes.html
+++ b/from_old_version/html/nodes.html
@@ -22,7 +22,7 @@
 </template>
 
 <template name="node">
-	<div id="{{_id}}" class="node_border" 
+	<div id="{{_id}}" class="node_border node_border_{{selected}}" 
 		style="top:{{position.y}}px;
 		       left: {{position.x}}px;">
 		<div class="node {{color}} {{selected}}">
