--- a/from_meteor_book/html/nodes.html
+++ b/from_meteor_book/html/nodes.html
@@ -1,6 +1,5 @@
 <template name="nodes_page">
 	{{> node_section}}
-	{{> modal}}
 	<div id="header">
 		<div id="login_bar">
 			{{> loginButtons align="right"}}
@@ -27,29 +26,9 @@
 		style="top:{{position.y}}px;
 		       left: {{position.x}}px;">
 		<div class="node {{color}} {{selected}}">
-			<span class="node_text">{{text}}</span>
+			<span class="node_text">{{title}}</span>
 			<span class="remove_node">x</span>
 		</div>
 	</div>
 </template>
 
-<template name="modal">
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	  <div class="modal-dialog">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-	      </div>
-	      <div class="modal-body">
-	        ...
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        <button type="button" class="btn btn-primary">Save changes</button>
-	      </div>
-	    </div>
-	  </div>
-	</div>
-
-</template>
