clicking title reveals input group on panels

--- a/from_meteor_book/html/modal.html
+++ b/from_meteor_book/html/modal.html
@@ -28,21 +28,25 @@
 	  			
 	  		</div><!-- End panel heading -->
 	  	</div><!-- End Panel -->
-	  
+	  	
+	  	{{#each infos}}
 	    <div class="panel panel-default">
-	    <div class="panel-heading" role="tab" id="headingOne">
+	    <div class="panel-heading" role="tab" id="heading_{{_id}}">
 	        <h4 class="panel-title">
-	            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
- 	            	Hypothesis
+	            <a data-toggle="collapse" data-parent="#accordion" href="#{{_id}}" aria-expanded="false" aria-controls="{{_id}}">
+ 	            	{{title}}
  	            </a>
 	        </h4>
+  			<input type="text" class="form-control hidden" id="info-title-input" placeholder="{{title}}">
+
 	    </div>
-	    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+	    <div id="{{_id}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading_{{_id}}">
 	        <div class="panel-body">
-  	          	Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+  	          	{{data}}
   	        </div><!-- End Panel-body -->
 	    </div><!-- End Panel Collapse -->
 	  </div><!-- End Panel -->
+	  {{/each}}
 	  <div class="btn btn-small btn-info 
 	  			  btn-group-justified
 	  			  glyphicon glyphicon-plus"
