--- a/from_meteor_book/html/nodes.html
+++ b/from_meteor_book/html/nodes.html
@@ -6,7 +6,8 @@
 		</div>
 		<h3 id="go_back">Experinode</h3>
 		<span class="graph_name"> - {{graph_name}}</span>
-		<button class="btn btn-default" id="create_node">Create Node</button>
+		<button class="btn btn-default" 
+			id="create_node">Create Node</button>
 	</div>
 </template>
 
