cannot submit empty node title

--- a/from_meteor_book/html/modal.html
+++ b/from_meteor_book/html/modal.html
@@ -7,14 +7,11 @@
 	  			<div class="row">
 	  				<div class="col-xs-6">
 	  					<div id="node-title">
-	  						<h4 class="panel-heading">{{title}}</h4>
+	  						<h4><a>{{title}}</a></h4>
 	  					</div>
-			  			<div class="input-group 
-			  						panel-heading
-			  						hidden" 
-			  				  id="node-title-input-group">
-			  				<input type="text" class="form-control" id="node-title-input" placeholder="{{title}}">
-			  			</div>
+
+		  				<input type="text" class="form-control hidden" id="node-title-input" placeholder="{{title}}">
+
 
 	  				</div><!-- End Column -->
 	  				<div class="col-xs-6 color_box-group">
