--- a/from_meteor_book/html/modal.html
+++ b/from_meteor_book/html/modal.html
@@ -29,17 +29,24 @@
 	  	{{#each infos}}
 	    <div class="panel panel-default">
 	    <div class="panel-heading" role="tab" id="heading_{{_id}}">
-	        <h4 class="panel-title">
+	        <h4 class="panel-title"
+	        	id="info-title-{{_id}}">
 	            <a data-toggle="collapse" data-parent="#accordion" href="#{{_id}}" aria-expanded="false" aria-controls="{{_id}}">
  	            	{{title}}
  	            </a>
 	        </h4>
-  			<input type="text" class="form-control hidden" id="info-title-input" placeholder="{{title}}">
+  			<input type="text" class="form-control hidden info-title-input" id="info-title-input-{{_id}}" placeholder="{{title}}">
 
 	    </div>
 	    <div id="{{_id}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading_{{_id}}">
 	        <div class="panel-body">
-  	          	{{data}}
+	        	<p class="info-data" id="info-data-{{_id}}">{{data}}</p>
+  	          	<textarea class='form-control
+  	          				     info-data-input
+  	          				     hidden' 
+  	          			  id="info-data-input-{{_id}}" 
+  	          			  rows="10"
+  	          			  placeholder="{{data}}"></textarea>
   	        </div><!-- End Panel-body -->
 	    </div><!-- End Panel Collapse -->
 	  </div><!-- End Panel -->
@@ -47,7 +54,7 @@
 	  <div class="btn btn-small btn-info 
 	  			  btn-group-justified
 	  			  glyphicon glyphicon-plus"
-	  	    display=""></div>
+	  	    id="new_info"></div>
 	</div>
 	{{/with}}
 </Template>
