--- a/from_meteor_book/html/modal.html
+++ b/from_meteor_book/html/modal.html
@@ -29,13 +29,25 @@
 	  	{{#each infos}}
 	    <div class="panel panel-default">
 	    <div class="panel-heading" role="tab" id="heading_{{_id}}">
-	        <h4 class="panel-title"
-	        	id="info-title-{{_id}}">
-	            <a data-toggle="collapse" data-parent="#accordion" href="#{{_id}}" aria-expanded="false" aria-controls="{{_id}}">
- 	            	{{title}}
- 	            </a>
-	        </h4>
-  			<input type="text" class="form-control hidden info-title-input" id="info-title-input-{{_id}}" placeholder="{{title}}">
+	    	<div class="info-heading"
+	    		 id="info-title-{{_id}}">
+	    		<span id="remove_info_{{_id}}" 
+	    		  class="remove_info
+	    				glyphicon 
+	    				glyphicon-remove-circle"></span>
+		        <h4 class="panel-title">
+		            <a data-toggle="collapse" data-parent="#accordion" href="#{{_id}}" aria-expanded="false" aria-controls="{{_id}}">
+	 	            	{{title}}
+	 	            </a>
+		        </h4>
+	    	</div>
+	    	
+  			<input type="text" 
+  					class="form-control 
+  						hidden 
+  						info-title-input" 
+  					id="info-title-input-{{_id}}" 
+  					placeholder="{{title}}">
 
 	    </div>
 	    <div id="{{_id}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading_{{_id}}">
