--- a/from_meteor_book/html/modal.html
+++ b/from_meteor_book/html/modal.html
@@ -26,6 +26,7 @@
 	  		</div><!-- End panel heading -->
 	  	</div><!-- End Panel -->
 	  	
+	  	<div id="sortable">
 	  	{{#each infos}}
 	    <div class="panel panel-default">
 	    <div class="panel-heading" role="tab" id="heading_{{_id}}">
@@ -40,7 +41,7 @@
 	 	            	{{title}}
 	 	            </a>
 		        </h4>
-	    	</div>
+	    	</div><!-- end info-heading -->
 	    	
   			<input type="text" 
   					class="form-control 
@@ -49,7 +50,7 @@
   					id="info-title-input-{{_id}}" 
   					placeholder="{{title}}">
 
-	    </div>
+	    </div><!-- End Panel-heading -->
 	    <div id="{{_id}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading_{{_id}}">
 	        <div class="panel-body">
 	        	<p class="info-data" id="info-data-{{_id}}">{{data}}</p>
@@ -61,12 +62,13 @@
   	          			  placeholder="{{data}}"></textarea>
   	        </div><!-- End Panel-body -->
 	    </div><!-- End Panel Collapse -->
-	  </div><!-- End Panel -->
-	  {{/each}}
-	  <div class="btn btn-small btn-info 
-	  			  btn-group-justified
-	  			  glyphicon glyphicon-plus"
-	  	    id="new_info"></div>
-	</div>
+	    </div><!-- End Panel -->
+	    {{/each}}
+	    </div><!-- end sortable -->
+	    <div class="btn btn-small btn-info 
+	  			    btn-group-justified
+	  			    glyphicon glyphicon-plus"
+	  	      id="new_info"></div>
+	</div><!-- End Panel Group -->
 	{{/with}}
 </Template>
